Remove the player after a 5 second timeout

--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -12412,6 +12412,7 @@ steps:
           import 'dart:math';
 
           import 'package:flame/components.dart';
+          import 'package:flame/effects.dart';
           import 'package:flame/events.dart';
           import 'package:flame_forge2d/flame_forge2d.dart';
           import 'package:flutter/material.dart';
@@ -12509,15 +12510,9 @@ steps:
               children.whereType<CustomPainterComponent>().first.removeFromParent();
               body.setType(BodyType.dynamic);
               body.applyLinearImpulse(_dragDelta * -50);
-            }
-
-            @override
-            void beginContact(Object other, Contact contact) {
-              super.beginContact(other, contact);
-              debugPrint('$contact');
-              if (other is BodyComponent) {
-                debugPrint('Player began contact with ${other.runtimeType}');
-              }
+              add(RemoveEffect(
+                delay: 5.0,
+              ));
             }
           }
 
