--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -12269,7 +12269,7 @@ steps:
             };
           }
 
-          class Brick extends BodyComponent with ContactCallbacks {
+          class Brick extends BodyComponent {
             Brick({
               required this.type,
               required this.size,
@@ -12432,7 +12432,7 @@ steps:
                 'alien${toString().split('.').last.capitalize()}_round.png';
           }
 
-          class Player extends BodyComponent with ContactCallbacks, DragCallbacks {
+          class Player extends BodyComponent with DragCallbacks {
             Player(Vector2 position, Sprite sprite)
                 : _initialPosition = position,
                   _sprite = sprite,
