--- a/forge2d_game/codelab_rebuild.yaml
+++ b/forge2d_game/codelab_rebuild.yaml
@@ -12425,7 +12425,7 @@ steps:
                 PlayerColor.values[Random().nextInt(PlayerColor.values.length)];
 
             String get fileName =>
-                'alien${toString().split('.').last.capitalize()}_round.png';
+                'alien${toString().split('.').last.capitalize}_round.png';
           }
 
           class Player extends BodyComponent with DragCallbacks {
@@ -12519,7 +12519,7 @@ steps:
           }
 
           extension on String {
-            String capitalize() =>
+            String get capitalize =>
                 characters.first.toUpperCase() + characters.skip(1).toLowerCase().join();
           }
 
@@ -12602,6 +12602,238 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_07
+      - name: Add lib/components/body_component_with_user_data.dart
+        path: forge2d_game/lib/components/body_component_with_user_data.dart
+        replace-contents: |
+          // Copyright 2024 The Flutter Authors. All rights reserved.
+          // Use of this source code is governed by a BSD-style license that can be
+          // found in the LICENSE file.
+
+          import 'package:flame_forge2d/flame_forge2d.dart';
+
+          class BodyComponentWithUserData extends BodyComponent {
+            BodyComponentWithUserData({
+              super.bodyDef,
+              super.fixtureDefs,
+              super.children,
+              super.renderBody,
+            });
+
+            @override
+            Body createBody() {
+              final body = world.createBody(super.bodyDef!)..userData = this;
+              fixtureDefs?.forEach(body.createFixture);
+              return body;
+            }
+          }
+      - name: Patch lib/components/brick.dart
+        path: forge2d_game/lib/components/brick.dart
+        patch: |
+          --- b/forge2d_game/step_07/lib/components/brick.dart
+          +++ a/forge2d_game/step_07/lib/components/brick.dart
+          @@ -9,6 +9,8 @@ import 'package:flame/components.dart';
+           import 'package:flame/extensions.dart';
+           import 'package:flame_forge2d/flame_forge2d.dart';
+           
+          +import 'body_component_with_user_data.dart';
+          +
+           const brickScale = 0.5;
+           
+           enum BrickType {
+          @@ -248,7 +250,7 @@ Map<BrickDamage, String> brickFileNames(BrickType type, BrickSize size) {
+             };
+           }
+           
+          -class Brick extends BodyComponent {
+          +class Brick extends BodyComponentWithUserData {
+             Brick({
+               required this.type,
+               required this.size,
+      - name: Patch lib/components/ground.dart
+        path: forge2d_game/lib/components/ground.dart
+        patch: |
+          --- b/forge2d_game/step_07/lib/components/ground.dart
+          +++ a/forge2d_game/step_07/lib/components/ground.dart
+          @@ -5,9 +5,11 @@
+           import 'package:flame/components.dart';
+           import 'package:flame_forge2d/flame_forge2d.dart';
+           
+          +import 'body_component_with_user_data.dart';
+          +
+           const groundSize = 7.0;
+           
+          -class Ground extends BodyComponent {
+          +class Ground extends BodyComponentWithUserData {
+             Ground(Vector2 position, Sprite sprite)
+                 : super(
+                     renderBody: false,
+      - name: Patch lib/components/player.dart
+        path: forge2d_game/lib/components/player.dart
+        patch: |
+          --- b/forge2d_game/step_07/lib/components/player.dart
+          +++ a/forge2d_game/step_07/lib/components/player.dart
+          @@ -10,6 +10,8 @@ import 'package:flame/events.dart';
+           import 'package:flame_forge2d/flame_forge2d.dart';
+           import 'package:flutter/material.dart';
+           
+          +import 'body_component_with_user_data.dart';
+          +
+           const playerSize = 5.0;
+           
+           enum PlayerColor {
+          @@ -25,7 +27,7 @@ enum PlayerColor {
+                 'alien${toString().split('.').last.capitalize}_round.png';
+           }
+           
+          -class Player extends BodyComponent with DragCallbacks {
+          +class Player extends BodyComponentWithUserData with DragCallbacks {
+             Player(Vector2 position, Sprite sprite)
+                 : _sprite = sprite,
+                   super(
+      - name: Add lib/components/enemy.dart
+        path: forge2d_game/lib/components/enemy.dart
+        replace-contents: |
+          // Copyright 2024 The Flutter Authors. All rights reserved.
+          // Use of this source code is governed by a BSD-style license that can be
+          // found in the LICENSE file.
+
+          import 'dart:math';
+
+          import 'package:flame/components.dart';
+          import 'package:flame_forge2d/flame_forge2d.dart';
+          import 'package:flutter/material.dart';
+
+          import 'body_component_with_user_data.dart';
+
+          const enemySize = 5.0;
+
+          enum EnemyColor {
+            pink(color: 'pink', boss: false),
+            blue(color: 'blue', boss: false),
+            green(color: 'green', boss: false),
+            yellow(color: 'yellow', boss: false),
+            pinkBoss(color: 'pink', boss: true),
+            blueBoss(color: 'blue', boss: true),
+            greenBoss(color: 'green', boss: true),
+            yellowBoss(color: 'yellow', boss: true);
+
+            final bool boss;
+            final String color;
+
+            const EnemyColor({required this.color, required this.boss});
+
+            static EnemyColor get randomColor =>
+                EnemyColor.values[Random().nextInt(EnemyColor.values.length)];
+
+            String get fileName =>
+                'alien${color.capitalize}_${boss ? 'suit' : 'square'}.png';
+          }
+
+          class Enemy extends BodyComponentWithUserData with ContactCallbacks {
+            Enemy(Vector2 position, Sprite sprite)
+                : super(
+                    renderBody: false,
+                    bodyDef: BodyDef()
+                      ..position = position
+                      ..type = BodyType.dynamic,
+                    fixtureDefs: [
+                      FixtureDef(
+                        PolygonShape()..setAsBoxXY(enemySize / 2, enemySize / 2),
+                        friction: 0.3,
+                      )
+                    ],
+                    children: [
+                      SpriteComponent(
+                        anchor: Anchor.center,
+                        sprite: sprite,
+                        size: Vector2.all(enemySize),
+                        position: Vector2(0, 0),
+                      ),
+                    ],
+                  );
+
+            @override
+            void beginContact(Object other, Contact contact) {
+              var interceptVelocity =
+                  (contact.bodyA.linearVelocity - contact.bodyB.linearVelocity)
+                      .length
+                      .abs();
+              debugPrint('interceptVelocity: $interceptVelocity');
+              if (interceptVelocity > 10) {
+                removeFromParent();
+              }
+
+              super.beginContact(other, contact);
+            }
+          }
+
+          extension on String {
+            String get capitalize =>
+                characters.first.toUpperCase() + characters.skip(1).toLowerCase().join();
+          }
+      - name: Patch lib/components/game.dart
+        path: forge2d_game/lib/components/game.dart
+        patch: |
+          --- b/forge2d_game/step_07/lib/components/game.dart
+          +++ a/forge2d_game/step_07/lib/components/game.dart
+          @@ -15,6 +15,7 @@ import 'package:xml/xpath.dart';
+           
+           import 'background.dart';
+           import 'brick.dart';
+          +import 'enemy.dart';
+           import 'ground.dart';
+           import 'player.dart';
+           
+          @@ -46,7 +47,7 @@ class MyPhysicsGame extends Forge2DGame {
+           
+               await world.add(Background(sprite: Sprite(backgroundImage)));
+               await addGround();
+          -    unawaited(addBricks());
+          +    unawaited(addBricks().then((_) => addEnemies()));
+               await addPlayer();
+           
+               return super.onLoad();
+          @@ -67,7 +68,7 @@ class MyPhysicsGame extends Forge2DGame {
+             final _random = Random();
+           
+             Future<void> addBricks() async {
+          -    for (var i = 0; i < 5; i++) {
+          +    for (var i = 0; i < 3; i++) {
+                 final type = BrickType.randomType;
+                 final size = BrickSize.randomSize;
+                 await world.add(
+          @@ -87,7 +88,7 @@ class MyPhysicsGame extends Forge2DGame {
+                     ),
+                   ),
+                 );
+          -      await Future<void>.delayed(const Duration(milliseconds: 500));
+          +      await Future<void>.delayed(const Duration(seconds: 1));
+               }
+             }
+           
+          @@ -105,6 +106,22 @@ class MyPhysicsGame extends Forge2DGame {
+                 addPlayer();
+               }
+             }
+          +
+          +  Future<void> addEnemies() async {
+          +    await Future<void>.delayed(const Duration(seconds: 1));
+          +    for (var i = 0; i < 3; i++) {
+          +      await world.add(
+          +        Enemy(
+          +          Vector2(
+          +              camera.visibleWorldRect.right / 3 +
+          +                  (_random.nextDouble() * 7 - 3.5),
+          +              (_random.nextDouble() * -7)),
+          +          aliens.getSprite(EnemyColor.randomColor.fileName),
+          +        ),
+          +      );
+          +    }
+          +    await Future<void>.delayed(const Duration(seconds: 1));
+          +  }
+           }
+           
+           class XmlSpriteSheet {
       - name: Build web app
         path: forge2d_game
         flutter: build web
