--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -3379,10 +3379,18 @@ steps:
           +
                              /// Fg-Rocks
                              Image.asset(AssetPaths.titleFgBase),
-      # TODO: Replace with appropriate canvas kit enforcement for Flutter 3.22
-      # - name: Patch web/index.html
-      #   path: next_gen_ui/web/index.html
-      #   patch-u: |
+      - name: Add web/flutter_bootstrap.js
+        path: next_gen_ui/web/flutter_bootstrap.js
+        replace-contents: |
+          {{flutter_js}}
+          {{flutter_build_config}}
+
+          _flutter.loader.load({
+            config: {'renderer': 'canvaskit'},
+            serviceWorkerSettings: {
+              serviceWorkerVersion: {{flutter_service_worker_version}},
+            },
+          });
       - name: Build Web app
         path: next_gen_ui
         flutter: build web
