--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -3386,9 +3386,8 @@ steps:
           {{flutter_build_config}}
 
           _flutter.loader.load({
-            config: {'renderer': 'canvaskit'},
-            serviceWorkerSettings: {
-              serviceWorkerVersion: {{flutter_service_worker_version}},
+            config: {
+              renderer: 'canvaskit',
             },
           });
       - name: Build Web app
